fixing overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   background-color: #000;
   background-size: cover;
@@ -35,7 +35,7 @@ body {
 }
 
 section {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -190,7 +190,27 @@ span:nth-child(10) {
   animation-duration: 2s;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 768px) {
+  
+  html, body {
+    overflow: hidden;
+  }
+
+  .message {
+    font-size: 28px;
+  }
+
+  #date,
+  #counter {
+    font-size: 16px;
+  }
+
+  #image {
+    max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 769px) {
   
   html, body {
     overflow: hidden;
